<resources>
    <string name="app_name">Mandaditos_2</string>
    <string name="todo">TODO</string>
    <string name="comprar">Comprar</string>
    <string name="button">Button</string>
    <string name="negocios">Negocios</string>
    <string name="productos">Productos</string>
    <string name="registro_administrativo">Registro Administrativo</string>
    <string name="vacio">-</string>
    <string name="ingresa_tu_celular">Ingresa tu Celular</string>

    <string name="Nego">nego</string>
    <string name="nombre_del_negocio">Nombre del Negocio</string>
    <string name="descripccion">Descripcion</string>
    <string name="agregar_producto">Agregar Producto</string>
    <string name="produ">produ</string>
    <string name="nombre_del_producto">Nombre del Producto</string>
    <string name="precio">$</string>
    <string name="agreg">+</string>
    <string name="registrar">registrar</string>
    <string name="registro_del_negocio">REGISTRO NEGOCIO</string>
    <string name="btnimanego">im</string>
    <string name="itemnego">itemNego</string>
    <string name="categoria">Categoria</string>
    <string name="mostrar">Mostrar</string>

    <string-array name="Ubicacion">
        <item>Jamay</item>
        <item>La Barca</item>
        <item>Ocotlan</item>
    </string-array>

    <string-array name="Categorias">
        <item>Comida</item>
        <item>Alcohol</item>
        <item>Farmacia</item>
    </string-array>

</resources>
