<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgVnego"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@mipmap/ic_launcher_round"
        android:contentDescription="@string/itemnego" />

    <TextView
        android:id="@+id/txtNegocio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgVnego"
        android:layout_alignEnd="@+id/imgVnego"
        android:layout_alignRight="@+id/imgVnego"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:gravity="center_horizontal"
        android:text="@string/nombre_del_negocio"
        android:textAlignment="center"
        android:textColor="#0e11d1"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/txtCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtNegocio"
        android:layout_alignEnd="@+id/txtNegocio"
        android:layout_alignRight="@+id/txtNegocio"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="0dp"
        android:gravity="center_horizontal"
        android:text="@string/categoria"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtCategoria"
        android:layout_alignEnd="@+id/txtCategoria"
        android:layout_alignRight="@+id/txtCategoria"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="0dp"
        android:gravity="center_horizontal"
        android:text="@string/descripccion"
        android:textAlignment="center"
        android:textColor="#ce1309"
        android:textSize="16sp" />

</RelativeLayout>